--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <a href="https://wa.me/91XXXXXXXXXX" target="_blank">WhatsApp</a>
   </footer>
   <!-- floting whatapp icon-->
-<a href=""https://chat.whatsapp.com/LaDx7XMrmTG7TcnOH2KYrM?mode=wwt""
+<a href="https://chat.whatsapp.com/LaDx7XMrmTG7TcnOH2KYrM?mode=wwt"
    class="whatsapp-float"
    target="_blank"
    aria-label="Join our WhatsApp group">
