--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Kalamassery, Ernakulam</span></li>
     </div>
   <!-- ✅ Footer Section -->
   <footer>
-    Built by <b>Sahal OK</b> |
+    Built by <b>Sahal OK</b> | Visitors: <span id="count"></span>
     <a href="https://www.linkedin.com/in/YOUR-LINKEDIN-USERNAME" target="_blank">LinkedIn</a> |
     <a href="https://wa.me/91XXXXXXXXXX" target="_blank">WhatsApp</a>
   </footer>
