--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
   <header> last dr - </header>
   <header style="margin-top: 2px;"> you dont need to go to another doctor</header>
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fsearch%3Fk%3Ddoctors%2Bbanner&psig=AOvVaw2uzlbGwBfoDDqA8xdG4MhY&ust=1762789365951000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCJDFsqS05ZADFQAAAAAdAAAAABAE"
+     alt="Doctors"
+     style="width:180px; border-radius:10px;">
 
   <div class="container">
     <input type="text" id="search" placeholder="Search doctors...">
@@ -194,5 +197,6 @@ Kalamassery, Ernakulam</span></li>
 
   
 <script src="scripts.js"></script>
+<script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
 </html>
